src/input.css
@import "tailwindcss";

/* themes - global styles */
@theme {
    /* typography */
    --font-rock: "Rock 3D", cursive;
    --font-grand: "Grandstander", sans-serif;
    --font-lexend: "Lexend", sans-serif;

    /* colors */
    --color-sky: #00b2ec;
    --color-turquoise: #38d7ba;
    --color-tomato: #ff5733;
    --color-school: #ffc600;
    --color-peony: #f367ee;
    --color-babypink: #ffa8cb;
    --color-blac: #222222;
    --color-cream: #fff8e7;
}

/* for toggling dark mode */
@custom-variant dark (&:where(.dark, .dark *));

/* apply dark styling for body */
body {
    @apply bg-white font-lexend text-lg text-blac;

    @variant dark {
        @apply bg-blue-950 text-cream;
    }
}

/* typography */
h1 {
    @apply font-grand text-3xl font-semibold;
}
h2 {
    @apply font-grand text-2xl font-semibold;
}
h5 {
    @apply text-xl font-medium;
}

/* buttons */
.toggle-btn {
    @apply rounded-2xl border-gray-500 bg-blue-950 px-6 py-3 font-medium text-white;

    @variant dark {
        @apply bg-white text-blue-950;
    }
}

